--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -5,96 +5,105 @@
     <title>The basic language of Web : HTML</title>
   </head>
   <body>
-    <h1>📘 The Code Magazine</h1>
-    <a href="blog.html">BLOG</a>
-    <h2>The Basic Language of the Web: HTML</h2>
-
-    <img
-      src="laura-jones.jpg"
-      alt="headshot of Laura Jones"
-      height="50"
-      width="50"
-    />
-    <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
-
-    <img src="post-img.jpg" height="200" width="500" />
-
-    <p>
-      All modern websites and web applications are built using three
-      <em>fundamental</em>
-      technologies: HTML, CSS and JavaScript. These are the languages of the
-      web.
-    </p>
-    <p>
-      In this post, let's focus on HTML. We will learn what HTML is all about,
-      and why you too should learn it.
-    </p>
-    <h3>What is HTML?</h3>
-    <p>
-      HTML stands for <strong>H</strong>yper<strong>T</strong>ext
-      <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup language
-      that web developers use to structure and describe the content of a webpage
-      (not a programming language).
-    </p>
-    <p>
-      HTML consists of elements that describe different types of content:
-      paragraphs, links, headings, images, video, etc. Web browsers understand
-      HTML and render HTML code as websites.
-    </p>
-    <p>In HTML, each element is made up of 3 parts:</p>
-    <ol>
-      <li>The opening tag</li>
-      <li>The closing tag</li>
-      <li>The actual element</li>
-    </ol>
-    <p>
-      You can learn more about at the
-      <a href="https://developer.mozilla.org/es/" target="__blank"
-        >MDN Web Docs</a
-      >
-    </p>
-    <h3>Why should you learn HTML?</h3>
-    <p>
-      There are countless reasons for learning the fundamental language of the
-      web. Here are 5 of them:
-    </p>
-    <il>
-      <li>To be able to use the fundamental web dev language</li>
-      <li>
-        To hand-craft beautiful websites instead of relying on tools like
-        Worpress or Wix
-      </li>
-      <li>To build web applications</li>
-      <li>To impress friends</li>
-      <li>To have fun 😃</li>
-    </il>
-    <p>Hopefully you learned something new here. See you next time!</p>
-
-    <h4>Related posts</h4>
-
-    <ul>
-      <li>
+    <header>
+      <h1>📘 The Code Magazine</h1>
+      <nav>
+        <a href="blog.html">BLOG</a>
+        <a href="#">Challenges</a>
+        <a href="#">Flexbox</a>
+        <a href="#">CSS Grid</a>
+      </nav>
+    </header>
+    <article>
+      <header>
+        <h2>The Basic Language of the Web: HTML</h2>
         <img
-          src="related-1.jpg"
-          alt="Person programming"
-          width="75"
-          height="75"
+          src="laura-jones.jpg"
+          alt="headshot of Laura Jones"
+          height="50"
+          width="50"
         />
+        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <img src="post-img.jpg" height="200" width="500" />
+      </header>
 
-        <a href="index.html"> How to Learn Web Development</a>
-        <p>By Jonas Shmedtmann</p>
-      </li>
-      <li>
-        <img src="related-2.jpg" alt="trueno" width="75" height="75" />
-        <a href="index.html"> The unknow power of css</a>
-        <p>By Jim</p>
-      </li>
-      <li>
-        <img src="related-3.jpg" alt="code" width="75" height="75" />
-        <a href="index.html"> Why JavaScript is awesome</a>
-        <p>By matilda</p>
-      </li>
-    </ul>
-    <p>Copyright © 2027 by The Code Magazine</p>
+      <p>
+        All modern websites and web applications are built using three
+        <em>fundamental</em>
+        technologies: HTML, CSS and JavaScript. These are the languages of the
+        web.
+      </p>
+      <p>
+        In this post, let's focus on HTML. We will learn what HTML is all about,
+        and why you too should learn it.
+      </p>
+      <h3>What is HTML?</h3>
+      <p>
+        HTML stands for <strong>H</strong>yper<strong>T</strong>ext
+        <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup
+        language that web developers use to structure and describe the content
+        of a webpage (not a programming language).
+      </p>
+      <p>
+        HTML consists of elements that describe different types of content:
+        paragraphs, links, headings, images, video, etc. Web browsers understand
+        HTML and render HTML code as websites.
+      </p>
+      <p>In HTML, each element is made up of 3 parts:</p>
+      <ol>
+        <li>The opening tag</li>
+        <li>The closing tag</li>
+        <li>The actual element</li>
+      </ol>
+      <p>
+        You can learn more about at the
+        <a href="https://developer.mozilla.org/es/" target="__blank"
+          >MDN Web Docs</a
+        >
+      </p>
+      <h3>Why should you learn HTML?</h3>
+      <p>
+        There are countless reasons for learning the fundamental language of the
+        web. Here are 5 of them:
+      </p>
+      <il>
+        <li>To be able to use the fundamental web dev language</li>
+        <li>
+          To hand-craft beautiful websites instead of relying on tools like
+          Worpress or Wix
+        </li>
+        <li>To build web applications</li>
+        <li>To impress friends</li>
+        <li>To have fun 😃</li>
+      </il>
+      <p>Hopefully you learned something new here. See you next time!</p>
+
+      <h4>Related posts</h4>
+
+      <ul>
+        <li>
+          <img
+            src="related-1.jpg"
+            alt="Person programming"
+            width="75"
+            height="75"
+          />
+
+          <a href="index.html"> How to Learn Web Development</a>
+          <p>By Jonas Shmedtmann</p>
+        </li>
+        <li>
+          <img src="related-2.jpg" alt="trueno" width="75" height="75" />
+          <a href="index.html"> The unknow power of css</a>
+          <p>By Jim</p>
+        </li>
+        <li>
+          <img src="related-3.jpg" alt="code" width="75" height="75" />
+          <a href="index.html"> Why JavaScript is awesome</a>
+          <p>By matilda</p>
+        </li>
+      </ul>
+    </article>
+    <footer>Copyright &copy; 2027 by The Code Magazine</footer>
   </body>
 </html>
