--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link href="style.css" rel="stylesheet" />
     <title>The basic language of Web : HTML</title>
   </head>
   <body>
@@ -23,7 +24,9 @@
           height="50"
           width="50"
         />
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">
+          Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+        </p>
         <img src="img/post-img.jpg" height="200" width="500" />
       </header>
 
@@ -81,7 +84,7 @@
 
     <aside>
       <h4>Related posts</h4>
-      <ul>
+      <ul class="related-list">
         <li>
           <img
             src="img/related-1.jpg"
@@ -91,21 +94,23 @@
           />
 
           <a href="index.html"> How to Learn Web Development</a>
-          <p>By Jonas Shmedtmann</p>
+          <p class="related-author">By Jonas Shmedtmann</p>
         </li>
         <li>
           <img src="img/related-2.jpg" alt="trueno" width="75" height="75" />
           <a href="index.html"> The unknow power of css</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img src="img/related-3.jpg" alt="code" width="75" height="75" />
           <a href="index.html"> Why JavaScript is awesome</a>
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
 
-    <footer>Copyright &copy; 2027 by The Code Magazine</footer>
+    <footer>
+      <p id="copyright">Copyright &copy; 2027 by The Code Magazine</p>
+    </footer>
   </body>
 </html>
